fix alignment issues

--- a/default.css
+++ b/default.css
@@ -1,9 +1,15 @@
- *{outline: 1px solid #f00 !important;}*/
+
 
 *,
 ::after,
 ::before{
     box-sizing: border-box;
+}
+
+body { 
+    height: 100%;
+    max-width: 100%;
+    margin: 0;
 }
 ul{
     padding: 0;
@@ -11,16 +17,6 @@ ul{
     list-style: none;
 }
 a {text-decoration: none;}
-
-
-.main-container {
-        display: flex;
-        flex-direction: column;
-        align-items: flex-start;
-        max-width: 75rem;
-        margin: 0 20rem;
-}
-
 
 .nav-container{
     display: flex;
